--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div *ngIf="filter_status == 1">
+  <!-- <div *ngIf="filter_status == 1">
     <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-1 btn_search">
       <button (click)="signMany()" class="btn btn-lg btn-block btn_submit">{{'Ký nhiều'| translate}}</button>
     </div>
@@ -18,7 +18,7 @@
       <button class="btn_submit" (click)="signManyContract()">{{'Ký'| translate}}</button>
       <button class="btn_submit" (click)="cancelSignMany()">{{'Huỷ'| translate}}</button>
     </div>
-  </div>
+  </div> -->
 
   <div class="row list_header" *ngIf="pageTotal > 0;">
 
