--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -1,105 +1,147 @@
 <div class="container-fluid">
-    <div class="header">
-      <h3 class="label-header">{{this.data.title | translate}}</h3>
+  <div class="header">
+    <h3 class="label-header">{{ this.data.title | translate }}</h3>
+  </div>
+  <div class="content">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.name" | translate }}</div>
+        <div>
+          <div [innerHTML]="name" class="input_text"></div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.short-name" | translate }}</div>
+        <div>
+          <div [innerHTML]="short_name" class="input_text"></div>
+        </div>
+      </div>
     </div>
-    <div class="content">
-        <div class="row">  
-            <div class="col-md-6">  
-                <div class="label_item">{{'unit.name' | translate }}</div>
-                <div>
-                    <div [innerHTML]="name" class="input_text"></div>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.short-name' | translate }}</div>
-                <div>
-                    <div [innerHTML]="short_name" class="input_text"></div>
-                </div>
-            </div>
-        </div>
 
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.code' | translate }}</div>
-                <div>
-                    <div [innerHTML]="code" class="input_text"></div>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.email' | translate }}</div>
-                <div>
-                    <div [innerHTML]="email" class="input_text"></div>
-                </div>
-            </div>
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.code" | translate }}</div>
+        <div>
+          <div [innerHTML]="code" class="input_text"></div>
         </div>
+      </div>
 
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.parent' | translate }}</div>
-                <div>
-                    <div [innerHTML]="parent_id" class="input_text"></div>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.phone' | translate }}</div>
-                <div>
-                    <div [innerHTML]="phone" class="input_text"></div>
-                </div>
-            </div>
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.email" | translate }}</div>
+        <div>
+          <div [innerHTML]="email" class="input_text"></div>
         </div>
+      </div>
+    </div>
 
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label_item">{{'unit.fax' | translate }}</div>
-                <div>
-                    <div [innerHTML]="fax" class="input_text"></div>
-                </div>
-            </div>
-        
-            <div class="col-md-6" style="align-self: center;">
-                <input type="radio" checked style="outline: none;">
-                <span> {{(status==1?'unit.active' : 'unit.inactive') | translate}}</span>
-            </div>
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.parent" | translate }}</div>
+        <div>
+          <div [innerHTML]="parent_id" class="input_text"></div>
         </div>
+      </div>
 
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6" *ngIf="!parent_id">
-                <div class="label_item">{{'Số lượng hợp đồng đã mua' | translate }}</div>
-                <div>
-                    <div [innerHTML]="numContractBuy" class="input_text"></div>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label_item">{{'Số lượng hợp đồng đã tạo' | translate }}</div>
-                <div>
-                    <div [innerHTML]="numContractCreate" class="input_text"></div>
-                </div>
-            </div>
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.phone" | translate }}</div>
+        <div>
+          <div [innerHTML]="phone" class="input_text"></div>
         </div>
+      </div>
+    </div>
 
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-6">
-                <div class="label_item">{{'Mã số thuế' | translate }}</div>
-                <div>
-                    <div [innerHTML]="taxCode" class="input_text"></div>
-                </div>
-            </div>
-        
-            <!-- <div class="col-md-6">
-                <div class="label_item">{{'Đẩy file hợp đồng lên Bộ công thương' | translate }}</div>
-                <div>
-                    <div [innerHTML]="cEcAPushMode" class="input_text"></div>
-                  </div>
-            </div> -->
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.fax" | translate }}</div>
+        <div>
+          <div [innerHTML]="fax" class="input_text"></div>
         </div>
-    
-        <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
+      </div>
+
+      <div class="col-md-6" style="align-self: center">
+        <input type="radio" checked style="outline: none" />
+        <span>
+          {{
+            (status == 1 ? "unit.active" : "unit.inactive") | translate
+          }}</span
+        >
+      </div>
+    </div>
+
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">{{ "Mã số thuế" | translate }}</div>
+        <div>
+          <div [innerHTML]="taxCode" class="input_text"></div>
         </div>
+      </div>
+    </div>
+
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng hợp đồng đã sử dụng: " | translate }}
+          <span class="highlight_result">
+            {{ this.numContractUse }}
+          </span>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng hợp đồng đã mua: " | translate }}
+          <span class="highlight_result">
+            {{ this.numContractBuy }}
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng eKYC đã sử dụng: " | translate }}
+          <span class="highlight_result">
+            {{ this.eKYCContractUse }}
+          </span>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng eKYC đã mua: " | translate }}
+          <span class="highlight_result">
+            {{ this.eKYCContractBuy }}
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng SMS đã sử dụng: " | translate }}
+          <span class="highlight_result">
+            {{ this.smsContractUse }}
+          </span>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="label_item">
+          {{ "Số lượng SMS đã mua: " | translate }}
+          <span class="highlight_result">
+            {{ this.smsContractBuy }}
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="justify-content: center; padding-top: 10px">
+      <button class="cancel-button" (click)="dialog.closeAll()" type="button">
+        {{ "btn.close" | translate }}
+      </button>
     </div>
   </div>
-  
+</div>
