--- a/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
+++ b/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
@@ -9,7 +9,7 @@
       </div>
   
       <div class="select-option">
-        <button
+        <button (click)="dialog.closeAll()"
           class="dx-button-form dx-button-close dx-button-90"
           type="button">Huỷ bỏ
         </button>
