--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -326,6 +326,8 @@
         </div>
       </div>
     </div>
+
+    <app-display-digital-signature [nameCompany]="nameCompany"></app-display-digital-signature>
   </div>
 
   <div *ngIf="pageTotal == 0" 
