--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-
   <div class="col-md-12" style="padding-top: 10px;" *ngIf="filter_status == 1 || filter_status == 4 || filter_status == -1 || filter_status == 11">
     <div class="input-line search">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
@@ -177,6 +176,9 @@
 
   <!--Danh sách tất cả hợp đồng có thể ký nhiều -->
   <div *ngIf="this.typeDisplay === 'signMany'">
+
+ 
+
     <div class="item_contract"  *ngFor="let item of contractsSignMany; let index1 = index">
       <div *ngIf="filter_status == 1 || filter_status == 4">
         <div class="row">
@@ -326,8 +328,6 @@
         </div>
       </div>
     </div>
-
-    <app-display-digital-signature [nameCompany]="nameCompany"></app-display-digital-signature>
   </div>
 
   <div *ngIf="pageTotal == 0" 
@@ -348,6 +348,7 @@
 
 </div>
 
+
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
   size="medium"
@@ -355,4 +356,18 @@
   type="ball-spin-clockwise">
   <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
+
+<div class="skeleton-sign position-absolute opacity-0">
+  <div class="signature-container" id="export-html"
+      style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
+    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <div class="signature-content"
+        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+      <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
+      <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+    </div>
+  </div>
+</div>
+
+
 
