--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -811,7 +811,7 @@
                     <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
-                      <input type="text" placeholder="Nhập số điện thoại" [(ngModel)]="d.email">
+                      <input type="text" placeholder="Nhập số điện thoại" [(ngModel)]="d.phone">
                     </div>
                   </div>
                 </div>
