--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -24,6 +24,7 @@
       </div>
 
       <div class="contract__content--participants">
+
         <!-- to chuc cua toi - nguoi xem xet -->
         <div class="participants-border">
           <div class="label">{{'user.view' | translate}}</div>
@@ -33,7 +34,34 @@
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
               [disabled]="getOriganzationReviewer().length == 1">
+
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+  
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'typeOfSignEmail' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'typeOfSignPhone' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -50,8 +78,16 @@
                     </button>
                   </div>
                 </div>
-                <div class="participants__name">
+                <div class="participants__name" *ngIf="d.login_by == 'email'">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+
+                <div class="participants__name" *ngIf="d.login_by == 'phone'">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
@@ -429,6 +465,32 @@
                 type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column; margin-bottom: 14px">
+
+                   <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại cho nguoi xem xet doi tac-->
+                   <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+    
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'typeOfSignEmail' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'typeOfSignPhone' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -437,11 +499,19 @@
                       <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                     </div>
                   </div>
-                  <div class="participants__name">
+                  <div class="participants__name" *ngIf="d.login_by == 'email'">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+
+                  <div class="participants__name" *ngIf="d.login_by == 'phone'">
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
                 </div>
