--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -49,6 +49,7 @@
         <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">Luồng xử lý hợp đồng</u>
       </div>
       <hr>
+
       <div class="flex-column" *ngIf="![2,3].includes(recipient.status)">
         <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 2">
           <p class="d-flex justify-content-center mb-4">XEM XÉT HỢP ĐỒNG</p>
@@ -77,8 +78,8 @@
               <label for="radio-refuse-secretary" class="ms-2">Không đồng ý</label>
             </div>
           </div>
-
         </div>
+
       </div>
     </div>
   </div>
@@ -115,7 +116,7 @@
   </div>
 
       <div style="margin:auto;padding: 10px">
-        <pdf-viewer *ngIf="this.recipient.status != 2 && this.recipient.status != 3" [src]="pdfSrcMobile"
+        <pdf-viewer *ngIf="![2,3].includes(recipient.status)" [src]="pdfSrcMobile"
         [render-text]="true"
         style="width: 95%; height: calc(70vh); border: 1px;"
         [fit-to-page]="true"
@@ -127,7 +128,7 @@
         <app-image-sign-contract id="image-sign-contract-mobile" *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
       </div>
    
-    <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
+    <!-- <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
       <p class="d-flex justify-content-center mb-4 text-uppercase">XÁC NHẬN KÝ HỢP ĐỒNG</p>
       <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
       <div class="confirm-radio d-flex justify-content-between mx-4">
@@ -141,7 +142,37 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
+
+    <div class="flex-column" *ngIf="![2,3].includes(recipient.status)">
+      <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 2">
+        <p class="d-flex justify-content-center mb-4">XEM XÉT HỢP ĐỒNG</p>
+        <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
+        <div class="confirm-radio d-flex justify-content-between mx-4">
+          <div class="radio-confirm">
+            <input id="radio-confirm-consider" type="radio" name="confirm-radio-consider" [value]="1" [(ngModel)]="confirmConsider">
+            <label for="radio-confirm-consider" class="ms-2">Đồng ý</label>
+          </div>
+          <div class="radio-refuse">
+            <input id="radio-refuse-consider" type="radio" name='confirm-radio-consider' [value]="2" [(ngModel)]="confirmConsider">
+            <label for="radio-refuse-consider" class="ms-2">Không đồng ý</label>
+          </div>
+        </div>
+      </div>
+      <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
+        <p class="d-flex justify-content-center mb-4 text-uppercase">XÁC NHẬN KÝ HỢP ĐỒNG</p>
+        <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
+        <div class="confirm-radio d-flex justify-content-between mx-4">
+          <div class="radio-confirm">
+            <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
+            <label for="radio-confirm-secretary" class="ms-2">Đồng ý</label>
+          </div>
+          <div class="radio-refuse">
+            <input id="radio-refuse-secretary" type="radio" name='confirm-radio-secretary' [value]="2" [(ngModel)]='confirmSignature'>
+            <label for="radio-refuse-secretary" class="ms-2">Không đồng ý</label>
+          </div>
+        </div>
+      </div>
     
 </div>
 
