--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -90,7 +90,7 @@
                   <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
               </div>
