--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -132,7 +132,7 @@
               style="display: flex; flex-direction: column"
             >
 
-                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
+                <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -144,7 +144,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -154,7 +154,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
@@ -346,8 +346,8 @@
               style="display: flex; flex-direction: column"
             >
 
-            <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư tổ chức của tôi-->
-            <div class="participants--input" style="display: flex">
+            <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với văn thư tổ chức của tôi-->
+            <!-- <div class="participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label_detail text-color">
                   <div *ngIf="d.typeSign">
@@ -358,7 +358,7 @@
                     <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=0/>
                   </div>&nbsp;
                   <div>
-                      {{'typeOfSignEmail' | translate}}
+                      {{'Đăng nhập bằng email' | translate}}
                   </div>
                 </div>
               </div>
@@ -368,11 +368,11 @@
                     <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=1/>
                   </div>&nbsp;
                   <div>
-                    {{'typeOfSignPhone' | translate}}
+                    {{'Đăng nhập bằng số điện thoại' | translate}}
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -805,7 +805,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-               <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của đối tác-->
+               <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký tổ chức của đối tác-->
                <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -817,7 +817,7 @@
                       <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=0/>
                     </div>&nbsp;
                     <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'Đăng nhập bằng email' | translate}}
                     </div>
                   </div>
                 </div>
@@ -827,7 +827,7 @@
                       <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=1/>
                     </div>&nbsp;
                     <div>
-                      {{'typeOfSignPhone' | translate}}
+                      {{'Đăng nhập bằng số điện thoại' | translate}}
                     </div>
                   </div>
                 </div>
@@ -1028,8 +1028,8 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư đối tác-->
-                <div class="participants--input" style="display: flex">
+                <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với văn thư đối tác-->
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div *ngIf="d.typeSign">
@@ -1040,7 +1040,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1050,11 +1050,11 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -1248,7 +1248,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký là cá nhân-->
+                <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký là cá nhân-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -1260,7 +1260,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1270,7 +1270,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
