--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -37,7 +37,7 @@
 
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -46,7 +46,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -56,7 +56,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
@@ -120,7 +120,7 @@
               
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-              <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại-->
+              <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại-->
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -129,7 +129,7 @@
                       <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                     </div>&nbsp;
                     <div>
-                      {{'typeOfSignEmail' | translate}}
+                      {{'Đăng nhập bằng email' | translate}}
                     </div>
                   </div>
                 </div>
@@ -139,7 +139,7 @@
                       <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                     </div>&nbsp;
                     <div>
-                      {{'typeOfSignPhone' | translate}}
+                      {{'Đăng nhập bằng số điện thoại' | translate}}
                     </div>
                   </div>
                 </div>
@@ -254,15 +254,15 @@
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại-->
-                <div class="participants--input" style="display: flex">
+                <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại-->
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
                         <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" [(ngModel)]="d.login_by" [value]="email"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -272,11 +272,11 @@
                         <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" [value]="phone" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -466,7 +466,7 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column; margin-bottom: 14px">
 
-                   <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại cho nguoi xem xet doi tac-->
+                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet doi tac-->
                    <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
@@ -475,7 +475,7 @@
                           <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                         </div>
                       </div>
                     </div>
@@ -485,7 +485,7 @@
                           <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailParticipantViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignPhone' | translate}}
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
                         </div>
                       </div>
                     </div>
@@ -538,7 +538,7 @@
                 [disabled]="getPartnerSignature(item).length == 1 ">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                  <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại-->
+                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại-->
                   <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
@@ -546,7 +546,7 @@
                           <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                         </div>
                       </div>
                     </div>
@@ -556,7 +556,7 @@
                           <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]="phone" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignPhone' | translate}}
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
                         </div>
                       </div>
                     </div>
@@ -665,15 +665,15 @@
                 [disabled]="getPartnerDocument(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                  <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại-->
-                  <div class="participants--input" style="display: flex">
+                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại-->
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
                           <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                         </div>
                       </div>
                     </div>
@@ -683,11 +683,11 @@
                           <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]="phone" [(ngModel)]="d.login_by" />
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignPhone' | translate}}
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -792,7 +792,7 @@
                 [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
 
-                  <!--Chọn {{'typeOfSignEmail' | translate}} hoặc số điện thoại đối với người ký là cá nhân-->
+                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại đối với người ký là cá nhân-->
                   <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
@@ -800,7 +800,7 @@
                           <input (change)="changeTypeSign(d)" name="checkPhoneMailPerson_{{index}}" type="radio" [value]="email" [(ngModel)]="d.login_by"/>
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignEmail' | translate}}
+                          {{'Đăng nhập bằng email' | translate}}
                         </div>
                       </div>
                     </div>
@@ -810,7 +810,7 @@
                           <input (change)="changeTypeSign(d)" name="checkPhoneMailPerson_{{index}}" type="radio" [value]="phone" [(ngModel)]="d.login_by" />
                         </div>&nbsp;
                         <div>
-                          {{'typeOfSignPhone' | translate}}
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
                         </div>
                       </div>
                     </div>
