fix css batch contract

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -98,9 +98,8 @@
         <div class="resize-drag not-out-drop"
              [id]="d.id"
              style="z-index: -1;"
-             #itemElement
-             
-             [ngClass]="changeColorDrag(null, d)"
+             #itemElement        
+             [ngClass]="changeColorDrag(null, true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
           <app-sign-contract  [datas]="datasBatch" [sign]="d"></app-sign-contract>
