--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -25,7 +25,7 @@
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <div style="z-index: 2;text-align: left;">Ký bởi: {{nameCompany}}</div>
+    <div style="z-index: 2;text-align: left;">Mã số thuế: {{cardId}}</div>
     <div style="z-index: 2;text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
   </div>
 </div>
