fix template form contract

--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -15,7 +15,7 @@
     <div class="contract--content">
       <div class="contract__content--title">
         <div>{{ "organization.me" | translate | uppercase }} -</div>
-        <input type="text" [(ngModel)]="data_organization.name" disabled />
+        <input type="text" [(ngModel)]="data_organization.name" />
       </div>
 
       <div class="contract__content--participants">
@@ -40,6 +40,31 @@
               [disabled]="getOriganzationReviewer().length == 1"
             />
             <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
+
+              <div class="participants--input" style="display: flex">
+                <div class="participants__name">
+                  <div class="label_detail text-color">
+
+                    <div>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                    </div>&nbsp;
+                    <div>
+                      {{'Đăng nhập bằng email' | translate}}
+                    </div>
+                  </div>
+                </div>
+                <div class="participants__name">
+                  <div class="label_detail text-color">
+                    <div>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                    </div>&nbsp;
+                    <div>
+                      {{'Đăng nhập bằng số điện thoại' | translate}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -50,7 +75,16 @@
                   </div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img" />
-                    <input
+                    <input *ngIf="d.login_by === 'email'"
+                      type="text"
+                      placeholder="{{ 'nhap_ho_va_ten' | translate }}"
+                      (focusin)="onFocusIn($event, index, 'view')"
+                      (ngxInputSearch)="doTheSearch($event, index, 'view')"
+                      [(ngModel)]="d.name"
+                      (focusout)="onFocusOut($event, d)"
+                    />
+
+                    <input *ngIf="d.login_by === 'phone'"
                       type="text"
                       placeholder="{{ 'nhap_ho_va_ten' | translate }}"
                       (focusin)="onFocusIn($event, index, 'view')"
@@ -77,14 +111,28 @@
                   </div>
                 </div>
                 <div class="participants__name">
-                  <div class="label_detail text-color">
+                  <div *ngIf="d.login_by === 'email'" class="label_detail text-color">
                     Email&nbsp;<span class="required-title">*</span>
                   </div>
-                  <div class="input-data">
+
+                  <div *ngIf="d.login_by === 'phone'" class="label_detail text-color">
+                    Số điện thoại&nbsp;<span class="required-title">*</span>
+                  </div>
+
+                  <div *ngIf="d.login_by === 'email'" class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img" />
                     <input
                       type="text"
                       placeholder="{{ 'nhap_email' | translate }}"
+                      [(ngModel)]="d.email"
+                    />
+                  </div>
+
+                  <div *ngIf="d.login_by === 'phone'" class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img" />
+                    <input
+                      type="text"
+                      placeholder="{{ 'Nhập số điện thoại' | translate }}"
                       [(ngModel)]="d.email"
                     />
                   </div>
@@ -137,7 +185,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div *ngIf="d.typeSign">
-                        <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
+                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
                       </div>&nbsp;
 
                       <div *ngIf="!d.typeSign">
@@ -151,7 +199,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
+                        <input (change)="changeTypeSign(d)" [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
                       </div>&nbsp;
                       <div>
                         {{'Đăng nhập bằng số điện thoại' | translate}}
@@ -170,7 +218,7 @@
                   </div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img" />
-                    <input
+                    <input *ngIf="!d.typeSign"
                       type="text"
                       placeholder="{{ 'nhap_ho_va_ten' | translate }}"
                       (focusin)="onFocusIn($event, index, 'signature')"
@@ -178,6 +226,14 @@
                       [(ngModel)]="d.name"
                       (focusout)="onFocusOut($event, d)"
                     />
+
+                    <input *ngIf="d.typeSign === 1"
+                    type="text"
+                    placeholder="{{ 'nhap_ho_va_ten' | translate }}"
+                    (focusin)="onFocusIn($event, index, 'signature')"
+                    [(ngModel)]="d.name"
+                    (focusout)="onFocusOut($event, d)"
+                  />
                   </div>
                   <div
                     class="search-name"
