--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -57,9 +57,14 @@
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
           
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                           (focusin)="onFocusIn($event, index, 'view')"
                           (ngxInputSearch)="doTheSearch($event, index, 'view')" [(ngModel)]="d.name"
+                          (focusout)="onFocusOut($event, d)">
+
+                    <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                          (focusin)="onFocusIn($event, index, 'view')"
+                          [(ngModel)]="d.name"
                           (focusout)="onFocusOut($event, d)">
                   </div>
                   <div class="search-name"
@@ -138,9 +143,14 @@
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                            (focusin)="onFocusIn($event, index, 'signature')"
                            (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name"
+                           (focusout)="onFocusOut($event, d)">
+
+                    <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                           (focusin)="onFocusIn($event, index, 'signature')"
+                           [(ngModel)]="d.name"
                            (focusout)="onFocusOut($event, d)">
                   </div>
                   <div class="search-name"
@@ -150,23 +160,9 @@
                     </button>
                   </div>
                 </div>
-                <!--                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
-                <!--                  <input type="checkbox">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
+            
                 <div class="participants__name">
-                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                  </div>
-                </div>
-              </div>
-
-              <div class="participants--input" style="display: flex">
-                <!--                [ngStyle]="getStyleSignature(d)"-->
-                <div class="participants__name">
-                  <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span>
+                 <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span>
                   </div>
                   <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="isListSignNotPerson"
@@ -182,21 +178,24 @@
                     </ng-template>
                   </ng-multiselect-dropdown>
                 </div>
+              </div>
 
-                <div class="participants__name">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+              <div class="participants--input" style="display: flex">
+                <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
-                <!--                <div *ngIf="getOtp(d)" class="participants-otp">-->
-                <!--                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
-                <!--                <div *ngIf="getOtp(d)" class="participants__name">-->
-                <!--                  <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>-->
-                <!--                  <input id="focus_phone_{{d.role}}" type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
-                <!--                </div>-->
+
+                <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                  </div>
+                </div>
               </div>
 
               <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
@@ -220,6 +219,8 @@
                (click)="addOriganzationSignature()">{{'btn.add.user.sign' | translate}}</u>
           </div>
         </div>
+
+        <!--Văn thư tổ chức-->
         <div class="participants-border">
           <div class="label">{{'user.doc' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationDocument(); let index = index">
@@ -232,7 +233,6 @@
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <!--                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">-->
                     <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                            (focusin)="onFocusIn($event, index, 'doc')"
                            (ngxInputSearch)="doTheSearch($event, index, 'doc')" [(ngModel)]="d.name"
@@ -245,42 +245,37 @@
                     </button>
                   </div>
                 </div>
-                <!--                <div class="participants-otp" style="z-index: -1">-->
-                <!--                  <input type="checkbox">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
                 <div class="participants__name">
-                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                  <!-- <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                  </div>
-                </div>
+                  </div> -->
+
+                    <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span>
+                    </div>
+                    <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
+                                             [settings]="dropdownSignTypeSettings" [data]="signType_doc"
+                                             >
+                      <ng-template #optionsTemplate let-item let-option="option"
+                                   let-id="id" let-isSelected="isSelected">
+                        <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
+                          <label style="color: #333; font-weight: normal;"
+                                 [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
+                            {{getContractConnectItems[id].name}}
+                          </label>
+                        </div>
+                      </ng-template>
+                    </ng-multiselect-dropdown>
+                    </div>
               </div>
 
               <div class="participants--input">
-                <div class="participants__name">
-                  <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span>
-                  </div>
-                  <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                           [settings]="dropdownSignTypeSettings" [data]="signType_doc"
-                                           >
-                    <ng-template #optionsTemplate let-item let-option="option"
-                                 let-id="id" let-isSelected="isSelected">
-                      <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                        <label style="color: #333; font-weight: normal;"
-                               [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                          {{getContractConnectItems[id].name}}
-                        </label>
-                      </div>
-                    </ng-template>
-                  </ng-multiselect-dropdown>
-                </div>
-
-                <div class="participants__name">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                <div class="participants__name" style="width: 90%">
+                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
               </div>
@@ -342,6 +337,7 @@
           </div>
         </div>
         
+        <!-- To chuc ky -->
         <div *ngIf="item.type == 2">
          <div class="participants-border">
            <div class="label" style="justify-content: space-between;">
@@ -352,17 +348,11 @@
                 <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item).length == 0" (change)="changeIsCoordination($event, item, id)">
                 <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item).length > 0" checked (change)="changeIsCoordination($event, item, id)">
                 <div style="padding: 0 20px 0 5px">Có người điều phối</div>
-
-
-                <!-- <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
-                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" (change)="changeIsSmsCoordination($event, item, 0)">
-                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked (change)="changeIsSmsCoordination($event, item, 0)">
-                  <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
-                </div> -->
               </div>
             </div>
          </div>
 
+          <!--Người xem xét-->
           <div class="participants-border">
             <div class="label">{{'user.view' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
@@ -407,6 +397,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md-1 delete-element" (click)="deletePartnerReviewer(index, item, id)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
@@ -571,6 +562,7 @@
           </div>
         </div>
 
+        <!--Ca nhan ky-->
         <div *ngIf="item.type == 3">
           <div class="participants-border">
             <div class="label">{{'user.sign' | translate}}</div>
@@ -580,6 +572,32 @@
                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                      [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1" >
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
+
+                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+    
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'Đăng nhập bằng email' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                        </div>&nbsp;
+                        <div>
+                          {{'Đăng nhập bằng số điện thoại' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
