--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -18,8 +18,7 @@
         <input
           class="input1"
           type="text"
-          [(ngModel)]="data_organization.name" 
-          disabled 
+          [(ngModel)]="data_organization.name"  
         />
       </div>
 
@@ -67,8 +66,15 @@
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+
+                    <!--Trường hợp đăng nhập bằng email đối với người xem xét-->
+                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                       (focusin)="onFocusIn($event, index, 'view')" (ngxInputSearch)="doTheSearch($event, index, 'view')"
+                      [(ngModel)]="d.name" (focusout)="onFocusOut($event, d)">
+
+                    <!--Trường hợp đăng nhập bằng số điện thoại đối với người xem xét-->
+                      <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                      (focusin)="onFocusIn($event, index, 'view')"
                       [(ngModel)]="d.name" (focusout)="onFocusOut($event, d)">
                   </div>
                   <div class="search-name"
@@ -151,10 +157,18 @@
                   <!--Trường nhập họ và tên cho người ký tổ chức của tôi-->
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+
+                    <!--Trường hợp đăng nhập bằng email-->
+                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
                       (focusin)="onFocusIn($event, index, 'signature')"
                       (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name"
                       (focusout)="onFocusOut($event, d)">
+
+                      <!--Trường hợp đăng nhập bằng số điện thoại-->
+                    <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                    (focusin)="onFocusIn($event, index, 'signature')"
+                    [(ngModel)]="d.name"
+                    (focusout)="onFocusOut($event, d)">
                   </div>
 
                   <div class="search-name"
