--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -27,7 +27,7 @@
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                 <div class="participants--input" style="display: flex">
+                 <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -49,7 +49,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -114,7 +114,7 @@
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-               <div class="participants--input" style="display: flex">
+               <!-- <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -136,7 +136,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -363,7 +363,7 @@
               <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                 <div class="participants--input" style="display: flex">
+                 <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -385,7 +385,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
@@ -417,7 +417,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                  <div class="participants--input" style="display: flex">
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -439,7 +439,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -472,19 +472,8 @@
                     </ng-multiselect-dropdown>                  
                   </div> 
                 </div>
-
-                
-<!-- 
-                <div class="participants--input" style="display: flex">
-                  <div class="participants__name" style="width: 90%">
-                    <div style="height: 40px; display: flex; align-items: center;">
-                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsSignature($event, item, index)">
-                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" [disabled]="getDataSignCka(d).length > 0" checked (change)="changeIsSmsSignature($event, item, index)">
-                      <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
-                    </div>
-                  </div>
-                </div> -->
               </div>
+
               <div *ngIf="getPartnerSignature(item).length > 1 || this.getPartnerCoordination(item).length > 0"
                    class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
@@ -574,7 +563,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                  <div class="participants--input" style="display: flex">
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -596,7 +585,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
